src/test/deca/codegen/valid/Objets/10Null.deca
class A {
    int a=0;
}

{
    A a = null;
}
