src/test/deca/codegen/invalid/Objets/00Null.deca
class A {
    int a=0;
}

{
    A a = null;
    int x = a.a;
}
